[gd_scene load_steps=10 format=2]

[ext_resource path="res://main/main.gd" type="Script" id=1]
[ext_resource path="res://menus/pause_menu/pause_menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://menus/game_over_menu/game_over_menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://main/player/player.tscn" type="PackedScene" id=4]
[ext_resource path="res://main/wall/wall.tscn" type="PackedScene" id=5]
[ext_resource path="res://main/ball/ball.tscn" type="PackedScene" id=6]
[ext_resource path="res://fonts/Ubuntu-B.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://main/score.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 7 )

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="gui" type="CanvasLayer" parent="."]

[node name="score" type="HBoxContainer" parent="gui"]
margin_right = 1022.0
margin_bottom = 600.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_1_score" type="Label" parent="gui/score"]
margin_right = 509.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 0.392157 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 0.196078 )
text = "5"
align = 1
valign = 1

[node name="player_2_score" type="Label" parent="gui/score"]
margin_left = 513.0
margin_right = 1022.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 0.392157 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 0.196078 )
text = "5"
align = 1
valign = 1

[node name="pause_menu" parent="gui" instance=ExtResource( 2 )]
visible = false

[node name="game_over_menu" parent="gui" instance=ExtResource( 3 )]
visible = false

[node name="player_1" parent="." instance=ExtResource( 4 )]
position = Vector2( 26, 300 )
ball_path = NodePath("../ball")

[node name="player_2" parent="." instance=ExtResource( 4 )]
position = Vector2( 998, 300 )
player_index = 2

[node name="wall_top_1" parent="." instance=ExtResource( 5 )]
position = Vector2( 171, 20 )
current_color = "R"

[node name="wall_top_2" parent="." instance=ExtResource( 5 )]
position = Vector2( 511, 20 )

[node name="wall_top_3" parent="." instance=ExtResource( 5 )]
position = Vector2( 851, 20 )
current_color = "B"

[node name="wall_bottom_1" parent="." instance=ExtResource( 5 )]
position = Vector2( 171, 580 )
current_color = "B"

[node name="wall_bottom_2" parent="." instance=ExtResource( 5 )]
position = Vector2( 511, 580 )

[node name="wall_bottom_3" parent="." instance=ExtResource( 5 )]
position = Vector2( 851, 580 )
current_color = "R"

[node name="ball" parent="." instance=ExtResource( 6 )]
position = Vector2( 532, 292 )
[connection signal="game_over" from="." to="." method="_on_main_game_over"]
[connection signal="goal" from="ball" to="gui/score" method="_on_ball_goal"]
